Commander Genius upstream updates

--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -38,7 +38,7 @@ ScreenOrientation=h
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
-VideoDepthBpp=24
+VideoDepthBpp=32
 
 # Enable OpenGL depth buffer (needed only for 3-d applications, small speed decrease) (y) or (n)
 NeedDepthBuffer=n
@@ -215,7 +215,7 @@ CompiledLibraries="ogg sdl_image boost_system"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-frtti -fexceptions -finline-functions -O2 -DOGG=1 -DANDROID=1 -DBUILD_TYPE=LINUX -DTARGET_LNX=1 -DNOTYPESAVE -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address -std=c++11 -Ijni/../jni/application/commandergenius/commandergenius/lib/GsKit -Ijni/vorbis/include/vorbis'
+AppCflags='-frtti -fexceptions -finline-functions -DOGG=1 -DANDROID=1 -DBUILD_TYPE=LINUX -DTARGET_LNX=1 -DNOTYPESAVE -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address -std=c++11 -Ijni/../jni/application/commandergenius/commandergenius/lib/GsKit -Ijni/vorbis/include/vorbis'
 
 # Additional LDFLAGS for application
 #AppLdflags='-ltremor'
@@ -228,7 +228,7 @@ AppOverlapsSystemHeaders=
 AppSubdirsBuild='commandergenius/src/* commandergenius/lib/*'
 
 # Exclude these files from build
-AppBuildExclude=''
+AppBuildExclude='commandergenius/src/engine/dbfusion'
 
 # Application command line parameters, including app name as 0-th param
 AppCmdline=''
