Added android_support library from NDK for swprinf and wchar support, updated JA2 project

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ project/res/drawable/app_icon.png
 project/proguard-project.txt
 project/proguard-local.cfg
 project/themes/converter
+project/jni/android-support
