--- a/project/jni/application/ja2/AndroidAppSettings.cfg
+++ b/project/jni/application/ja2/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="JaggedAlliance2"
 AppFullName=com.opensourced.ja2
 
 # Application version code (integer)
-AppVersionCode=01235202
+AppVersionCode=01235203
 
 # Application user-visible version name (string)
-AppVersionName="0.12.352.02"
+AppVersionName="0.12.352.03"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -221,7 +221,7 @@ AppMinimumRAM=0
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
 # Available libraries: mad (GPL-ed!) sdl_mixer sdl_image sdl_ttf sdl_net sdl_blitpool sdl_gfx sdl_sound intl xml2 lua jpeg png ogg flac tremor vorbis freetype xerces curl theora fluidsynth lzma lzo2 mikmod openal timidity zzip bzip2 yaml-cpp python boost_date_time boost_filesystem boost_iostreams boost_program_options boost_regex boost_signals boost_system boost_thread glu avcodec avdevice avfilter avformat avresample avutil swscale swresample bzip2 
-CompiledLibraries="jpeg png boost_filesystem boost_system"
+CompiledLibraries="jpeg png boost_filesystem boost_system android_support"
 
 # Application uses custom build script AndroidBuild.sh instead of Android.mk (y) or (n)
 CustomBuildScript=y
