Commander Genius updates

--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Commander Genius"
 AppFullName=net.sourceforge.clonekeenplus
 
 # Application version code (integer)
-AppVersionCode=180000
+AppVersionCode=180010
 
 # Application user-visible version name (string)
-AppVersionName="1.8.0.0 Beta"
+AppVersionName="1.8.0.0 Release"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -38,7 +38,7 @@ ScreenOrientation=h
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
-VideoDepthBpp=32
+VideoDepthBpp=24
 
 # Enable OpenGL depth buffer (needed only for 3-d applications, small speed decrease) (y) or (n)
 NeedDepthBuffer=n
