Fixes to SuperTux, it still does not draw properly

--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -52,7 +52,7 @@ NeedGles2=n
 
 # Application uses software video buffer - you're calling SDL_SetVideoMode() without SDL_HWSURFACE and without SDL_OPENGL,
 # this will allow small speed optimization. Enable this even when you're using SDL_HWSURFACE. (y) or (n)
-SwVideoMode=y
+SwVideoMode=n
 
 # Application video output will be resized to fit into native device screen (y)/(n)
 SdlVideoResize=y
@@ -192,7 +192,7 @@ RedefinedKeysScreenKbNames="Jump Action"
 # 1 = Simple Theme by Beholder (white, with gamepad joystick)
 # 2 = Sun by Sirea (yellow, with round joystick)
 # 3 = Keen by Gerstrong (multicolor, with round joystick)
-TouchscreenKeysTheme=2
+TouchscreenKeysTheme=3
 
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
@@ -219,7 +219,7 @@ NDK_TOOLCHAIN_VERSION=4.8
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a x86 mips'
+MultiABI='armeabi-v7a' # x86 mips
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
@@ -245,7 +245,7 @@ AppSubdirsBuild='. supertux/src/* supertux/external/tinygettext/src supertux/ext
 AppBuildExclude='supertux/external/findlocale/example.c supertux/src/video/sdl/sdl_lightmap.cpp supertux/src/video/sdl/sdl_painter.cpp supertux/src/video/sdl/sdl_renderer.cpp supertux/src/video/sdl/sdl_texture.cpp supertux/src/video/sdl/sdl_video_system.cpp supertux/src/control/game_controller_manager.cpp supertux/src/control/joystick_manager.cpp'
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline='supertux2'
+AppCmdline='./supertux2'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
