SuperTux: fixed video output

--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -230,7 +230,7 @@ CompiledLibraries="sdl_image physfs curl openal vorbis ogg"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-include GLES/gl.h -Ijni/openal/include/AL -Ijni/boost/include -DHAVE_SDL -frtti -fexceptions -std=gnu++11'
+AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -DHAVE_SDL=1 -frtti -fexceptions -std=gnu++11'
 
 # Additional LDFLAGS for application
 AppLdflags='-frtti -fexceptions'
