SuperTux: switched to 16bpp videomode, because it's slow on some levels for totally no reason, it's just a 2D game without any fancy graphice, why does it lag even on Note 3?

--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -7,7 +7,7 @@ AppName="SuperTux"
 AppFullName=org.lethargik.supertux2
 
 # Application version code (integer)
-AppVersionCode=03406
+AppVersionCode=3406
 
 # Application user-visible version name (string)
 AppVersionName="0.3.4.06"
@@ -17,8 +17,8 @@ AppVersionName="0.3.4.06"
 # If the URL in in the form ':dir/file.dat:http://URL/' it will be downloaded as binary BLOB to the application dir and not unzipped
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
-# Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!Data files|:data.zip:http://sourceforge.net/projects/libsdl-android/files/SuperTux/data-3.zip"
+# You can specify Google Play expansion files in the form 'obb:main.12345' or 'obb:patch.12345' where 12345 is the app version, first associated with the file
+AppDataDownloadUrl="!Data files|:data.zip:obb:patch.3406|:data.zip:http://sourceforge.net/projects/libsdl-android/files/SuperTux/data-3.zip"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=y
@@ -38,7 +38,7 @@ ScreenOrientation=h
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
-VideoDepthBpp=24
+VideoDepthBpp=16
 
 # Enable OpenGL depth buffer (needed only for 3-d applications, small speed decrease) (y) or (n)
 NeedDepthBuffer=n
@@ -219,7 +219,7 @@ NDK_TOOLCHAIN_VERSION=4.8
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a' # x86 mips
+MultiABI='armeabi-v7a x86 mips'
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
