SDL: Retro keyboard theme by Santiago Radeff

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -131,13 +131,13 @@ AppNeedsTextInput=y
 
 # Application uses joystick (y) or (n), the on-screen DPAD will be used as joystick 0 axes 0-1
 # This will disable AppNeedsArrowKeys option
-AppUsesJoystick=y
+AppUsesJoystick=n
 
 # Application uses second on-screen joystick, as SDL joystick 0 axes 2-3 (y)/(n)
-AppUsesSecondJoystick=y
+AppUsesSecondJoystick=n
 
 # Application uses third on-screen joystick, as SDL joystick 0 axes 20-21 (y)/(n)
-AppUsesThirdJoystick=
+AppUsesThirdJoystick=n
 
 # Application uses accelerometer (y) or (n), the accelerometer will be used as joystick 1 axes 0-1 and 5-7
 AppUsesAccelerometer=y
