--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@
 [submodule "project/jni/application/basiliskii/basiliskii"]
 	path = project/jni/application/basiliskii/basiliskii
 	url = git@github.com:pelya/BasiliskII-android.git
+[submodule "project/jni/vncserver/src"]
+	path = project/jni/vncserver/src
+	url = git@github.com:LibVNC/libvncserver.git
