--- a/project/jni/glshim/CMakeLists.txt
+++ b/project/jni/glshim/CMakeLists.txt
@@ -12,12 +12,11 @@ link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 if(BCMHOST)
     include_directories(/opt/vc/include /opt/vc/include/interface/vcos/pthreads /opt/vc/include/interface/vmcs_host/linux)
     link_directories(/opt/vc/lib)
-    add_definitions(-DBCMHOST -D_GNU_SOURCE)
+    add_definitions(-DBCMHOST)
 endif()
 
 link_directories(${CMAKE_BINARY_DIR}/lib)
-add_definitions(-O2)
-include(flags.cmake)
+add_definitions(-g -std=gnu99 -funwind-tables -O3)
 
 include_directories(include)
 add_subdirectory(src)
