--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -222,7 +222,7 @@ NDK_TOOLCHAIN_VERSION=
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a x86 mips'
+MultiABI='armeabi-v7a x86 mips armeabi' # armeabi is still used eh
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
