XSDL: multi-APK requires different version numbers, doh

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="XServer XSDL"
 AppFullName=x.org.server
 
 # Application version code (integer)
-AppVersionCode=11126
+AppVersionCode=11127
 
 # Application user-visible version name (string)
-AppVersionName="1.11.26"
+AppVersionName="1.11.27"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -222,7 +222,7 @@ NDK_TOOLCHAIN_VERSION=
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a x86 mips armeabi' # armeabi is still used eh
+MultiABI='armeabi-v7a x86 mips' # armeabi is still used eh
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
