--- a/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
@@ -18,13 +18,13 @@ AppVersionName="2.8.14.20"
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # You can specify Google Play expansion files in the form 'obb:main.12345' or 'obb:patch.12345' where 12345 is the app version, first associated with the file
-AppDataDownloadUrl="!!Data files|:data.tar.xz:obb:main.281420|:data.tar.xz:http://sourceforge.net/projects/libsdl-android/files/ubuntu/jessie/dist-gimp-jessie.tar.xz/download^!!XSDL data files|:data-1.tar.gz:data-1.tgz^!!XSDL fonts|:DroidSansMono.ttf:DroidSansMono.ttf^!!Postinstall script|:postinstall.sh:postinstall.sh"
+AppDataDownloadUrl="!!Data files|:data.tar.xz:obb:main.281420|:data.tar.xz:http://sourceforge.net/projects/libsdl-android/files/ubuntu/jessie/dist-gimp-jessie.tar.xz/download^!!XSDL data files|:data-1.tar.gz:data-1.tgz^!!XSDL fonts|:DroidSansMono.ttf:DroidSansMono.ttf^!!Postinstall script|:postinstall.sh:postinstall.sh^!!Loading image|:loading.gif:loading.gif^!!Update 1|:update1.tar.gz:update1.tgz"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="%"
+DeleteFilesOnUpgrade="postinstall.sh libsdl-DownloadFinished-0.flag libsdl-DownloadFinished-1.flag libsdl-DownloadFinished-2.flag libsdl-DownloadFinished-3.flag libsdl-DownloadFinished-4.flag libsdl-DownloadFinished-5.flag libsdl-DownloadFinished-6.flag libsdl-DownloadFinished-7.flag libsdl-DownloadFinished-8.flag libsdl-DownloadFinished-9.flag"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
@@ -249,7 +249,7 @@ AppSubdirsBuild=''
 AppBuildExclude=''
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline='XSDL -nohelp -screenbuttons -exec $SECURE_STORAGE_DIR/usr/bin/xli	-onroot	-border	black	-center	$SECURE_STORAGE_DIR/loading.gif	;	$SECURE_STORAGE_DIR/img/proot.sh	./startx.sh'
+AppCmdline='XSDL -nohelp -screenbuttons -warndiskspacemb 1750 -exec $SECURE_STORAGE_DIR/usr/bin/xli	-onroot	-border	black	-center	$UNSECURE_STORAGE_DIR/loading.gif	;	$SECURE_STORAGE_DIR/img/proot.sh	./startx.sh'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
