--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 
 # Application version code (integer)
-AppVersionCode=15037
+AppVersionCode=15039
 
 # Application user-visible version name (string)
-AppVersionName="1.5.0.37"
+AppVersionName="1.5.0.39"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!!Data files - 20 Mb|openttd-data-1.5.0.zip.xz|http://source
 ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="baseset ai game lang"
+DeleteFilesOnUpgrade="baseset ai game lang libsdl-DownloadFinished-0.flag"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
